--- a/RayTracer/RayTracer.vcxproj
+++ b/RayTracer/RayTracer.vcxproj
@@ -140,13 +140,18 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Objects\Sphere.cpp" />
     <ClCompile Include="Renderer\Canvas.cpp" />
     <ClCompile Include="Renderer\Renderer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Math\Color.h" />
     <ClInclude Include="Math\MathUtils.h" />
+    <ClInclude Include="Math\Ray.h" />
+    <ClInclude Include="Objects\Object.h" />
+    <ClInclude Include="Objects\Sphere.h" />
     <ClInclude Include="Renderer\Canvas.h" />
+    <ClInclude Include="Renderer\Material.h" />
     <ClInclude Include="Renderer\Renderer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
